# duckdb-connector

./: .gitignore  Cargo.toml  Connector.toml  Makefile  README.md  build.rs  config-example.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yaml  publish_dev.yaml
actions/: fluvio-install.sh  zig-install.sh
build-scripts/: aarch64-linux-musl-zig-cc  aarch64-linux-musl-zig-cxx  aarch64-linux-unknown-gnu-zig-cc  ld.lld
crates/duckdb-sink/: Cargo.toml  Connector.toml
crates/duckdb-sink/src/: config.rs  main.rs  model.rs
docker/: Dockerfile.aarch64-unknown-linux-gnu
src/: bind.rs  db.rs  main.rs  model.rs  sink.rs
test/: READM.md  duckdb-local.yaml  duckdb-md.yaml
