[package]
name = "duckdb-sink"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that sends records to DuckDB"

[[bin]]
name = "duckdb-sink"
path = "src/main.rs"
doc = false


[dependencies]
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false }
anyhow = { version = "1.0" }
async-std = { version = "1.12",  default-features = false, features = ["attributes"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1", default-features = false }
url = { version = "2.5", default-features = false, features = ["serde"] }
rust_decimal = { version = "1.34", default-features = false }
chrono = { version = "0.4", default-features = false }
uuid = { version = "1.7", default-features = false }
duckdb = { version = "0.9.2", features = ["bundled"] }

fluvio = { git = "https://github.com/infinyon/fluvio.git", rev = "d9a76327b674614c7373a9c12eb6a0ed2fcc4dc0" }
fluvio-connector-common = { features = ["derive"], git = "https://github.com/infinyon/fluvio.git", rev = "d9a76327b674614c7373a9c12eb6a0ed2fcc4dc0" }
fluvio-model-sql = { git = "https://github.com/infinyon/sql-connector.git", tag = "v0.3.3" }

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main"
