[package]
name = "duckdb-sink"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that sends records to DuckDB"

[dependencies]
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false }
anyhow = { version = "1.0" }
async-std = { version = "1.12",  default-features = false, features = ["attributes"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1", default-features = false }
url = { version = "2.4", default-features = false, features = ["serde"] }
rust_decimal = { version = "1.28", default-features = false }
chrono = { version = "0.4", default-features = false }
uuid = { version = "1.3", default-features = false }
duckdb = { version = "0.8.1"}

fluvio-model-sql = { workspace = true }
fluvio = { workspace = true}
fluvio-connector-common = { workspace = true, features = ["derive"]}
